@@ -6700,6 +6700,7 @@ zzz<legend>yy</legend><legend>xx</legend>aaa</details>
 </rule>
 #errors
 /rule/feed/entry;element missing:atom|author;m
+/rule/feed;element missing:atom|author;m
 
 #data
 <rule xmlns="http://www.w3.org/1999/xhtml">
@@ -6708,6 +6709,7 @@ zzz<legend>yy</legend><legend>xx</legend>aaa</details>
 #errors
 /rule/feed/entry;element missing:atom|author;m
 /rule/feed/entry;element missing:atom|author;m
+/rule/feed;element missing:atom|author;m
 
 #data
 <div xmlns="http://www.w3.org/1999/xhtml">
