@@ -1,5 +1,17 @@
 2008-03-20  Wakaba  <wakaba@suika.fam.cx>
 
+	* content-model-1.dat: Some test results are fixed.
+
+	* content-model-atom-1.dat: Some test results are fixed.
+	Test data for |atom:author| for |atom:feed| are added.
+
+2008-03-20  Wakaba  <wakaba@suika.fam.cx>
+
+	* content-model-atom-1.dat: Test data for |atom:author|
+	for |atom:feed| are added.
+
+2008-03-20  Wakaba  <wakaba@suika.fam.cx>
+
 	* content-model-1.dat: Some test results related on |atom:entry|
 	are fixed.
 
