@@ -1,5 +1,9 @@
 2008-03-20  Wakaba  <wakaba@suika.fam.cx>
 
+	* Atom.pm: Support for |author| for |feed| checking.
+
+2008-03-20  Wakaba  <wakaba@suika.fam.cx>
+
 	* Atom.pm: Support for |author| for |entry| checking.
 
 2008-03-17  Wakaba  <wakaba@suika.fam.cx>
